@@ -63,6 +63,7 @@ ini_set('session.name', 'sessid');
 ini_set('session.use_cookies', 1);
 ini_set('session.gc_maxlifetime', 21600);
 ini_set('session.gc_divisor', 500);
+ini_set('magic_quotes_gpc', 0);
 ini_set('error_reporting', E_ALL&~E_NOTICE); 
 
 // increase maximum execution time for php scripts
