@@ -50,7 +50,8 @@
 <roundcube:label name="select" />:&nbsp;
 <roundcube:button command="select-all" label="all" classAct="active" />&nbsp;
 <roundcube:button command="select-all" prop="unread" label="unread" classAct="active" />&nbsp;
-<roundcube:button command="select-none" label="none" classAct="active" />
+<roundcube:button command="select-none" label="none" classAct="active" /> &nbsp;&nbsp;&nbsp;
+<roundcube:label name="quota" />: <roundcube:object name="quotaDisplay" />
 </div>
 
 </body>
